fixed the search bar and search button spacing issue and also fixed a spacing issue between the search button and the upload button.

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ header {
   width: 40vw;
   height: 50px;
   padding-left: 10px;
-  margin: 0 20px;
+  margin: 0 0 0 20px;
 }
 
 .nav-bar {
